SERVER-44025 Ensure isNamedCode specializations have internal linakage